--- a/storyfinal-1.ipynb
+++ b/storyfinal-1.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 4) (2317954160.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    <title>Jonathan Soma's Incredible Website</title>\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "<!doctype html>\n",
+    "<html>\n",
+    "  <head>\n",
+    "    <title>Jonathan Soma's Incredible Website</title>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <h1>Welcome to my website!</h1>\n",
+    "  </body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
