--- a/storyfinal-1.ipynb
+++ b/storyfinal-1.ipynb
@@ -18,21 +18,9 @@
     "<!doctype html>\n",
     "<html>\n",
     "  <head>\n",
-    "    <title>Jonathan Soma's Incredible Website</title>\n",
+    "    <title>Tory Lysik SNL Project/title>\n",
     "  </head>\n",
-    "  <body>\n",
-    "    <h1>Welcome to my website!</h1>\n",
-    "  </body>\n",
-    "</html>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. \n",
+    "  <Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. \n",
     "\n",
     "The actor’s double entendre’s serve to entertain the audience. But what makes a Saturday Night Live episode? What elements create the best atmosphere for a guaranteed laugh? \n",
     "\n",
@@ -67,7 +55,11 @@
     "This data proves that as SNL went on, we appreciated the classic seasons while relating to more current actors. Michaels seems to have tricks up his sleeve than we realize, and possibly more data. \n",
     "\n",
     "This story was inspired by Kate McKinnon. If you know, you know. \n",
-    "\n"
+    "\n",
+    ">\n",
+    "    <h1>SNL!</h1>\n",
+    "  </body>\n",
+    "</html>"
    ]
   }
  ],
